--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.11.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2"
   }
 }
