--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "pnpm": "^8.6.9",
     "request": "^2.88.2"
   }
 }
